fix: Preventing list pages from horizontal scrolling on mobile

--- a/web-application/client/components/generic/Page.css
+++ b/web-application/client/components/generic/Page.css
@@ -1,9 +1,13 @@
 .page {
     box-sizing: border-box;
+    max-width: 100vw;
     padding: 20px 0;
+    width: 100%;
 }
 
 .page .page-body {
+    box-sizing: border-box;
+    max-width: 100vw;
     background-color: var(--main-background-color);
     color: var(--main-text-color);
     width: 100%;
@@ -15,7 +19,6 @@
     .page {
         display: grid;
         grid-template-columns: 400px auto 400px;
-        width: 100%;
         max-width: 1600px;
         margin: 0 auto;
     }
@@ -25,7 +28,6 @@
     .page {
         display: grid;
         grid-template-columns: 1fr 800px 1fr;
-        width: 100%;
         margin: 0 auto;
     }
 }
@@ -44,15 +46,12 @@
         grid-row: 1 / 2;
     }
     .page .page-body {
-        box-sizing: border-box;
         margin: 0 auto;
         grid-row: 3 / 4;
-        width: 100%;
     }
 }
 @media (width <= 700px) {
     .page {
-        width: 100%;
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: auto;
@@ -66,9 +65,7 @@
         grid-row: 1 / 2;
     }
     .page .page-body {
-        box-sizing: border-box;
         margin: 0 auto;
         grid-row: 3 / 4;
-        width: 100%;
     }
 }
